[BUGFIX] Width of inspector fields changes when scrollbar is visible
The inspector fields for date and images didn't have a explicit width
of 288 pixels, which lead to them becomming smaller when the scrollbar
is visible. They should however remain the same width scrollbar or not.

Reviewed-on: https://review.typo3.org/26004
Tested-by: Aske Ertmann
Original-Commit-Hash: c557d936f9dbde5d4d81ec7afd7e9a5466167a97

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -56,7 +56,7 @@
 	@import "../Shared/Chosen";
 
 	.chosen-container {
-		width: 100% !important;
+		width: ($inspectorWidth - $defaultMargin * 2) !important;
 	}
 
 	.neos-toolbar {
